--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <title>Counter | First JS Project</title>
 </head>
 <body>
-    
+    <div class="content">
+        <h1>Counter</h1>
+        <h4>0</h4>
+        <div class="buttons">
+            <button class="btn" id="btn-5">-5</button>
+            <button class="btn" id="btn-1">-1</button>
+            <button class="btn" id="btn-reset">Reset</button>
+            <button class="btn" id="btn-plus-1">+1</button>
+            <button class="btn" id="btn-plus-5">+5</button>
+        </div>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
